[package]
name = "tw-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
base64 = "0.22.1"
dotenv = "0.15.0"
lazy_static = "1.5.0"
prometheus = "0.13.4"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
